Fix white space under footer

--- a/src/styles.css
+++ b/src/styles.css
@@ -73,7 +73,6 @@ blockquote {
 }
 
 .footer-text {
-  padding-bottom: 20px;
   padding-top: 20px;
 }
 
